WIP - Updated blockquote styles

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,8 +30,7 @@ a.github {
 blockquote {
   padding: 10px 10px 10px 18px;
   border-left: 7px solid $primary;
-  background-color: $teal;
-  color: $white;
+  background-color: $light;
 
   p {
     margin: 0;
