--- a/src/templates/module.module.scss
+++ b/src/templates/module.module.scss
@@ -32,9 +32,14 @@
   ul {
     @include list-unstyled;
 
-    li > a {
-      &:hover {
-        text-decoration: none;
+    li {
+      padding-top: 5px;
+
+      > a {
+        font-weight: 300;
+        &:hover {
+          text-decoration: none;
+        }
       }
     }
   }
@@ -45,11 +50,11 @@
   top: 0rem;
   right: 1rem;
   font-weight: 300;
-  background-color: $teal;
+  background-color: $primary;
   padding: .75rem;
   border-top-right-radius: .5rem;
   border-bottom-left-radius: .5rem;
-  color: $gray-200;
+  color: $white;
 
   @media screen and (max-width: 576px) {
     padding: .5rem;
