--- a/src/templates/module.module.scss
+++ b/src/templates/module.module.scss
@@ -45,15 +45,19 @@
   }
 }
 
+#header {
+  position: relative;
+}
+
 .timeToRead {
   position: absolute;
-  top: 0rem;
-  right: 1rem;
+  bottom: 0;
+  right: 0;
   font-weight: 300;
   background-color: $primary;
   padding: .75rem;
-  border-top-right-radius: .5rem;
-  border-bottom-left-radius: .5rem;
+  border-bottom-right-radius: .5rem;
+  border-top-left-radius: .5rem;
   color: $white;
 
   @media screen and (max-width: 576px) {
