--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,11 +1,11 @@
 @import "bootstrap/scss/_functions.scss";
 @import "bootstrap/scss/_variables.scss";
-@import "../styles/functions";
 
-$signalSvg: "<svg xmlns='http://www.w3.org/2000/svg' width='84' height='48'><path d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='currentColor' fill-opacity='1' fill-rule='evenodd' /></svg>";
+@import "../styles/functions";
+@import "../styles/svg";
 
 .jumbotron {
   position: relative;  
   background-color: $gray-100;
-  background-image: url(escape-svg(background-svg($signalSvg, $primary, 0.08)));
+  background-image: url(escape-svg(background-svg($signal, $primary, 0.08)));
 }
